Fixed a bug where it was incorrectly showing the zone connector div on the first zone (it should display no connector above the first zone). Centered the asterisk for saving by setting the letter-spacing to 'normal'.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -226,6 +226,7 @@ main {
 
 #save-timeline-button {
   @extend .timeline-title;
+  letter-spacing: normal;
 }
 
 .timeline-saved-message {
